--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
-fastapi==0.95.2
-uvicorn==0.22.0
+# FastAPI and ASGI server (for the backend)
+fastapi==0.95.2   
+uvicorn==0.22.0  
 
-# 
-streamlit==1.18.0
+# WebSocket
+websocket-client==1.5.1   
 
+# Hugging Face for Transformers (BERT, T5, etc.)
+transformers==4.28.0   
 
-websocket-client==1.5.1
+# PyTorch or TensorFlow (choose one based on the model you're using)
+torch==1.13.1  
+tensorflow==2.11.0 
 
-scikit-learn==1.1.2
-pandas==1.5.3
-numpy==1.24.0
-tensorflow==2.11.0  
-transformers==4.28.0  
-joblib==1.2.0
-requests==2.28.1 
+# Pydantic for data validation in FastAPI
 pydantic==1.10.2  
 
-docker==5.0.0
+# For environment variable management
+python-dotenv==0.21.0  
 
+# Dependencies for Streamlit frontend
+streamlit==1.18.0   
+# For MLOps (Docker, MLflow)
+docker==5.0.0   
+mlflow==2.1.1   
+
+# Dependencies for model training and fine-tuning
+scikit-learn==1.1.2  
+numpy==1.24.0  
+pandas==1.5.3  
+scipy==1.9.3    
+
+# For model evaluation
+seqeval==1.2.2  
+
+# For handling datasets and caching (Hugging Face datasets)
+datasets==2.12.0  
+
+# For running the project in development (optional but useful)
+pytest==7.2.2   
